# AndroidNDKDemo2

./: FiDemoKeyStore.jks  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/: ggui_ps.txt  ggui_vs.txt  standard_ps.txt  standard_vs.txt
app/src/main/assets/uitexture/: mm1.ggm  mm1.txt  mm2.txt  mm3.txt  mm4.txt  mm5.txt  mm6.txt  mm7.ggm  mm7.txt  mm8.ggm  mm8.txt  nwfont.ggm
app/src/main/cpp/: AnCpp2JavaLibNative.cpp  AnFileAsset.cpp  AnFileAsset.h  AnFileExternal.cpp  AnFileExternal.h  AnFileInternal.cpp  AnFileInternal.h  AnIDEOutputLog.h  AnInputMsgDefine.cpp  AnInputMsgDefine.h  AnInputMsgDispatch.cpp  AnInputMsgDispatch.h  AnJava2CppStaticFunction.cpp  AnJava2CppStaticFunction.h  AndroidAdepter.cpp  AndroidAdepter.h  GGUIActionAudio.cpp  GGUIActionAudio.h  GGUIActionBase.cpp  GGUIActionBase.h  GGUIActionEvent.cpp  GGUIActionEvent.h  GGUIActionFactory.cpp  GGUIActionFactory.h  GGUIActionGroup.cpp  GGUIActionGroup.h  GGUIActionLine.cpp  GGUIActionLine.h  GGUIActionMove.cpp  GGUIActionMove.h  GGUIActionScale.cpp  GGUIActionScale.h  GGUIActionWait.cpp  GGUIActionWait.h  GGUIAnimation.cpp  GGUIAnimation.h  GGUIBaseInclude.cpp  GGUIBaseInclude.h  GGUIColor.cpp  GGUIColor.h  (+192 more)
app/src/main/java/com/ggui/swoosh/fidemo/: Cpp2JavaLibNative.java  Cpp2JavaLoadAllLib.java  Java2CppStaticFunction.java  MainActivity.java  MainActivityHandler.java  MainGLRenderer.java  MainGLSurfaceView.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
